Subtler terracotta tones, fix publication alignment, compact awards
- Nudge theme colors slightly more terracotta (purple, cyan, background)
- Disable publication thumbnails to fix col-sm-8 vs col-sm-10 misalignment
- Fold Awards & Fellowships into Skills card as a single compact line

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,14 +11,14 @@ $red-color-dark: #b71c1c !default;
 $orange-color: #f29105 !default;
 $blue-color: #0076df !default;
 $blue-color-dark: #00369f !default;
-$cyan-color: #d49585 !default;
+$cyan-color: #d29080 !default;
 $light-cyan-color: color.adjust($cyan-color, $lightness: 25%);
 $green-color: #00ab37 !default;
 $green-color-lime: #b7d12a !default;
 $green-color-dark: #009f06 !default;
 $green-color-light: #ddffdd !default;
 $green-color-bright: #11d68b !default;
-$purple-color: #c27458 !default;
+$purple-color: #c07050 !default;
 $light-purple-color: color.adjust($purple-color, $lightness: 25%);
 $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
@@ -29,7 +29,7 @@ $grey-color-light: color.adjust($grey-color, $lightness: 40%);
 $grey-color-dark: #1c1c1d;
 $grey-900: #212529;
 
-$white-color: #fcfaf6 !default;
+$white-color: #faf8f2 !default;
 $black-color: #3b3330 !default;
 
 // Theme colors
